Started on the Map activity, still trying to figure out how to make the googleAPIclient stuff work with the api 23 permission requests

--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">CrapMap</string>
+    <string name="permission_title_location">Why do you need my location?</string>
+    <string name="permission_explanation_location">CrapMap uses your current location to suggest nearby bathrooms. We do not store this data.</string>
+    <string name="permission_confirmation">OK</string>
 </resources>
