Trying to put the map view inside another view. It works sometimes?? There's a cool button in there too

--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="permission_title_location">Why do you need my location?</string>
     <string name="permission_explanation_location">CrapMap uses your current location to suggest nearby bathrooms. We do not store this data.</string>
     <string name="permission_confirmation">OK</string>
+    <string name="title_activity_main">MainActivity</string>
 </resources>
