--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="permission_explanation_location">CrapMap uses your current location to suggest nearby bathrooms. We do not store this data.</string>
     <string name="permission_confirmation">OK</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="new_bathroom_title">Create New Bathroom</string>
 </resources>
