MapsActivity now pulls data from the server, parses it into Bathroom & Review objects, displays on the map. User can click them to transfer into stub preview activity. I seem to have broken current location display though

--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="permission_confirmation">OK</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="new_bathroom_title">Create New Bathroom</string>
+    <string name="loading_map_message">Finding bathrooms near you...</string>
 </resources>
