Implement custom infoWindowAdapter for bathroom markers, now shows all three ratings and the requirePurchase field

--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="new_bathroom_title">Create New Bathroom</string>
     <string name="loading_map_message">Finding bathrooms near you...</string>
+    <string name="view_reviews">Tap to see more information</string>
 </resources>
